--- a/src/ReactTasks/useReducer-Todo's/todos.css
+++ b/src/ReactTasks/useReducer-Todo's/todos.css
@@ -1,8 +1,9 @@
 .container{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     height: 100vh;
+    flex-wrap: wrap;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 form{
@@ -21,7 +22,7 @@ label{
     font-size: 20px;
     font-weight: 600;
 }
-input[type="text"],input[type="number"]{
+input[type="text"],select{
     border: 2px solid rgb(0, 187, 255);
     height: 40px;
     margin-bottom: 20px;
@@ -41,5 +42,38 @@ input[type="submit"]:hover{
     background-color: rgb(0, 187, 255);
     border-radius: 8px;
     color: white;
+}
+.dataShower{
+    /* border: 2px solid; */
+    height: 100%;
+    width: 65%;
+    display: flex;
+    flex-wrap: wrap;
+}
+.dataShower div{
+    width: 50%;
+    height: 50%;
+    overflow-y: scroll;
+    /* border: 1px solid; */
+}
+::-webkit-scrollbar{
+    display: none;
+}
+.dataShower h2{
+    color: rgb(0, 151, 206);
+    font-size: 25px;
+    margin-left: 50px;
+    text-align: center;
+    margin-top: 10px;
+    font-weight: 600;
+}
+.dataShower li{
+    font-size: 18px;
+    margin-left: 30px;
+    color: rgb(134, 134, 134);
+}
+option{
+    font-size: 18px;
+    padding: 10px;
 }
 
