--- a/src/ReactTasks/useReducer-Todo's/todos.css
+++ b/src/ReactTasks/useReducer-Todo's/todos.css
@@ -1,6 +1,8 @@
 .container{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    flex-direction: column;
+    gap: 30px;
     align-items: center;
     height: 100vh;
     flex-wrap: wrap;
@@ -37,6 +39,8 @@ input[type="submit"]{
     transition: all ease 0.2s;
     font-size: 20px;
     font-weight: 600;
+    border: 0px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 input[type="submit"]:hover{
     background-color: rgb(0, 187, 255);
@@ -75,5 +79,22 @@ input[type="submit"]:hover{
 option{
     font-size: 18px;
     padding: 10px;
+}
+button{
+    height: 32px;
+    font-size: 17px;
+    background-color:transparent;
+    border: 0;
+    color: red;
+    font-weight: 600;
+    cursor: pointer;
+    transition: all ease 0.3s;
+    border-radius: 2px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+button:hover{
+    border-radius: 4px;
+    scale: 1.1;
+    
 }
 
