--- a/src/ReactTasks/country_DropList/countryData.css
+++ b/src/ReactTasks/country_DropList/countryData.css
@@ -15,3 +15,17 @@ p{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: 600;
 }
+input{
+    font-size: 20px;
+    color: rgb(92, 92, 92);
+    width: 400px;
+    border-radius: 3px;
+    border-width: 5px;
+    border-color: rgb(255, 149, 0);
+    height: 30px;
+    margin-left: 50%;
+    transform: translateX(-50%);
+}
+input:focus{
+    outline: none;
+}
