--- a/src/ReactTasks/country_DropList/countryData.css
+++ b/src/ReactTasks/country_DropList/countryData.css
@@ -1,15 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Cantarell:ital,wght@0,400;0,700;1,400;1,700&family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&family=Jacquard+12&family=Nabla&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cantarell:ital,wght@0,400;0,700;1,400;1,700&family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&family=Jacquard+12&display=swap');
 .cardContainer{
     width: 200px;
-    height: 300px;
+    height: 250px;
+    padding-bottom: 20px;
+    padding-top: 20px;
     border-radius: 5px;
-    background-color: rgba(209, 209, 209, 0.267);
+    background-color: rgba(196, 196, 196, 0.379);
     display: flex;
+    gap: 10px;
     flex-direction: column;
-    justify-content: center;
+    justify-content:end;
     align-items: center;
     cursor: pointer;
 }
-p{
+
+.cardNames{
     font-size: 18px;
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -28,4 +34,71 @@ input{
 }
 input:focus{
     outline: none;
+}
+button{
+    background-color: rgba(0, 132, 189, 0.737);
+    width: 100px;
+    border: 0px;
+    height: 25px;
+    color: white;
+    border-radius: 3px;
+    font-size: 16px;    
+}
+.backgroundDiv{
+    background: url("https://s1.1zoom.me/b5050/818/431331-Kycb_3840x2160.jpg");
+    background-size:cover;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.DetailsContainer{
+    width: 300px;
+    height: 400px;
+    backdrop-filter: blur(3px);
+    background-color: rgba(0, 0, 0, 0.372);
+    border-radius: 15px;
+    font-family: "Edu AU VIC WA NT Hand", cursive;
+    font-style: normal;
+    color: white;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+.DetailsContainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+#circleImage{
+    border-radius: 2%;
+}
+.DetailsPTAG{
+    margin:0px;
+    font-size: 14px;
+    font-weight: 500;
+}
+span{
+    color: whitesmoke;
+    font-weight: 500;
+    font-size: 19px;
+}
+a{
+    text-align: center;
+    margin-top: 10px;
+    color: rgb(0, 200, 255);
+    font-weight: 500;
+    text-decoration: none;
+}
+#title{
+    text-align: center;
+    font-size: 50px;
+    margin: 4px;
+    font-family: "Nabla", system-ui;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-variation-settings:
+    "EDPT" 100,
+    "EHLT" 12;
 }
