--- a/src/ReactTasks/GlobalStateManagement/OtherScreens/otherRecipe.css
+++ b/src/ReactTasks/GlobalStateManagement/OtherScreens/otherRecipe.css
@@ -19,11 +19,22 @@
 p{
     margin-left: 10px;
     margin-bottom: 5px;
-    color: rgb(10, 99, 144);
+    color: white
 }
 h4{
     text-align: center;
+    font-size: 25px;
+    font-weight: 600;
     margin: 15px 0 10px 0;
-    color: rgb(0, 102, 154);
+    color: rgb(255, 255, 255);
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.recipeDiscription{
+    background-color: rgba(0, 0, 0, 0.212);
+    height: 300px;
+    width: 300px;
+    overflow: scroll;
+}
+::-webkit-scrollbar{
+    display: none;
 }
