--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body{
+/* body{
     margin: 0;
     padding: 0;
 }
@@ -24,4 +24,4 @@ body{
     100%{
         background-position: 0% 0%;
     }
-}
+} */
